--- a/index.html
+++ b/index.html
@@ -273,43 +273,43 @@
                 </li>
 
             </ul>
-            <ul class="rank4 Rank">
-                <li class="light4 light">
-                    <img src="img/page5.3ligsrc.src" alt=""/>
-                    <img class="hasLi4 hasLi" src="img/hasLi.src" alt=""/>
-                    <p class="Show1 textS4">React</p>
-                </li>
-                <li class="block4 block">
-                    <img class="normal1" src="img/block.src" alt=""/>
-                    <img class="normal2" src="img/block.src" alt=""/>
-                    <img class="normal3" src="img/block.src" alt=""/>
-                    <img class="normal4"  src="img/block.src" alt=""/>
-                    <img class="normal5" src="img/block.src" alt=""/>
-                    <img class="normal6" src="img/block.src" alt=""/>
-                    <img class="normal7" src="img/block.src" alt=""/>
-                <img src="img/block.src" alt=""/>
-                <img src="img/block.src" alt=""/>
-                <img src="img/block.src" alt=""/>
-            </li>
-                <li class="block4 block spec">
-                    <img class="specialShow1" src="img/page5.33.src" alt=""/>
-                    <img class="specialShow2" src="img/page5.33.src" alt=""/>
-                    <img class="specialShow3" src="img/page5.33.src" alt=""/>
-                    <img class="specialShow4" src="img/page5.33.src" alt=""/>
-                    <img class="specialShow5" src="img/page5.33.src" alt=""/>
-                    <img class="specialShow6" src="img/page5.33.src" alt=""/>
-                    <img class="specialShow7" src="img/page5.33.src" alt=""/>
-                </li>
+            <!--<ul class="rank4 Rank">-->
+                <!--<li class="light4 light">-->
+                    <!--<img src="img/page5.3ligsrc.src" alt=""/>-->
+                    <!--<img class="hasLi4 hasLi" src="img/hasLi.src" alt=""/>-->
+                    <!--<p class="Show1 textS4">React</p>-->
+                <!--</li>-->
+                <!--<li class="block4 block">-->
+                    <!--<img class="normal1" src="img/block.src" alt=""/>-->
+                    <!--<img class="normal2" src="img/block.src" alt=""/>-->
+                    <!--<img class="normal3" src="img/block.src" alt=""/>-->
+                    <!--<img class="normal4"  src="img/block.src" alt=""/>-->
+                    <!--<img class="normal5" src="img/block.src" alt=""/>-->
+                    <!--<img class="normal6" src="img/block.src" alt=""/>-->
+                    <!--<img class="normal7" src="img/block.src" alt=""/>-->
+                <!--<img src="img/block.src" alt=""/>-->
+                <!--<img src="img/block.src" alt=""/>-->
+                <!--<img src="img/block.src" alt=""/>-->
+            <!--</li>-->
+                <!--<li class="block4 block spec">-->
+                    <!--<img class="specialShow1" src="img/page5.33.src" alt=""/>-->
+                    <!--<img class="specialShow2" src="img/page5.33.src" alt=""/>-->
+                    <!--<img class="specialShow3" src="img/page5.33.src" alt=""/>-->
+                    <!--<img class="specialShow4" src="img/page5.33.src" alt=""/>-->
+                    <!--<img class="specialShow5" src="img/page5.33.src" alt=""/>-->
+                    <!--<img class="specialShow6" src="img/page5.33.src" alt=""/>-->
+                    <!--<img class="specialShow7" src="img/page5.33.src" alt=""/>-->
+                <!--</li>-->
 
-            </ul>
+            <!--</ul>-->
         </div>
         <div class="swiper-slide pageSix" trueId="page6">
 
       <div class="circleM1">
           <img class="ci ci1" src="img/circle.src" alt="">
-          <p class="ti1 tiTT1 ti">2015年</p>
-          <p class="tiS tiTT2 ti">xx公司实习</p>
-          <p class="tiT tiTT2 ti">职位:前端开发</p>
+          <p class="tiTT1 ti1 ti">2015年</p>
+          <p class="tiTT2 tiS  ti">xx公司实习</p>
+          <p class="tiTT2 tiT  ti">职位:前端开发</p>
       </div>
             <img class="ci ci2" src="img/circle.src" alt="">
             <div class="circleM2">
@@ -319,9 +319,9 @@
             </div>
             <div class="circleM3">
                 <img class="ci ci3" src="img/circle.src" alt="">
-                <p class="ti1 tiS4 ti">2016年</p>
-                <p class="tiS tiS5 ti">xx公司</p>
-                <p class="tiT tiS6 ti">职位:前端开发</p>
+                <p class="ti ti1 tiS4">2016年</p>
+                <p class="ti tiS tiS5">xx公司</p>
+                <p class="ti tiT tiS6">职位:前端开发</p>
             </div>
 
         </div>
